Feat: Authentication, Authorization

--- a/GUI/Views/Category/Shift/Index.cshtml
+++ b/GUI/Views/Category/Shift/Index.cshtml
@@ -1,1 +1,103 @@
-<div>Ok</div>
+
+
+
+<div>
+    <div class="title">
+        <h2 class="title-content">
+            Shift
+        </h2>
+        <div class="filter-search">
+            <i class="fa-solid fa-magnifying-glass filter-search-icon"></i>
+            <input class="filter-search-input" placeholder="Search"/>
+        </div>
+    </div>
+    
+    <div class="content">
+        <div class="content-table">
+            <table class="table">
+                <thead class="content-table-header">
+                <th>No.</th>
+                <th>Name</th>
+                <th>Time</th>
+                <th>Days</th>
+                </thead>
+                <tbody class="content-table-body">
+                <tr>
+                    <td>1</td>
+                    <td>Shift 1</td>
+                    <td>16:30 - 18:30</td>
+                    <td>Mon / Wed</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Shift 2</td>
+                    <td>18:30 - 20:30</td>
+                    <td>Tue / Wed</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Shift 3</td>
+                    <td>18:30 - 20:30</td>
+                    <td>Tue / Wed</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Shift 4</td>
+                    <td>18:30 - 20:30</td>
+                    <td>Tue / Wed</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Shift 5</td>
+                    <td>18:30 - 20:30</td>
+                    <td>Tue / Wed</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>Shift 6</td>
+                    <td>18:30 - 20:30</td>
+                    <td>Tue / Wed</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>Shift 7</td>
+                    <td>18:30 - 20:30</td>
+                    <td>Tue / Wed</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>Shift 8</td>
+                    <td>18:30 - 20:30</td>
+                    <td>Tue / Wed</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>Shift 9</td>
+                    <td>18:30 - 20:30</td>
+                    <td>Tue / Wed</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td>Shift 10</td>
+                    <td>18:30 - 20:30</td>
+                    <td>Tue / Wed</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="content-paging">
+            <ul class="pagination justify-content-end">
+                <li class="page-item disabled">
+                    <a class="page-link" href="#" tabindex="-1">Previous</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="#">Next</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
