--- a/GUI/wwwroot/css/site.css
+++ b/GUI/wwwroot/css/site.css
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-  margin: 0 0 60px 0;
+  margin: 0;
   font-family: "Nunito Sans", sans-serif;
   color: #202224;
 }
@@ -35,4 +35,3 @@ a {
   text-decoration: none;
   font-family: "Nunito Sans", sans-serif;
 }
-
