--- a/GUI/wwwroot/css/site.css
+++ b/GUI/wwwroot/css/site.css
@@ -15,6 +15,10 @@ html {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
+input:focus, button:focus {
+  outline: none !important;
+}
+
 html {
   position: relative;
   min-height: 100%;
