--- a/GUI/wwwroot/css/style.css
+++ b/GUI/wwwroot/css/style.css
@@ -55,3 +55,16 @@
     border-radius: 20px;
     padding: 0 12px;
 }
+
+/* MODAL */
+
+.modal-snhcenter .modal-body input {
+    width: 100%;
+    border-radius: 4px;
+    border: 1px solid #d5d5d5;
+    padding: 4px;
+}
+
+.modal-snhcenter .modal-body .form-group {
+    margin-top: 8px;
+}
