Feat: Change database connect string

--- a/GUI/Views/Category/Shift/Index.cshtml
+++ b/GUI/Views/Category/Shift/Index.cshtml
@@ -10,8 +10,8 @@
             <div class="row">
                 <div class="col-md-6">
                     <div id="toolbar">
-                        <button class="btn btn-success" onclick="addData()"><i class="fa-solid fa-plus"></i> Add</button>
                         <button class="btn btn-primary" onclick="showData()"><i class="fa-solid fa-eye"></i> View</button>
+                        <button class="btn btn-success" onclick="addData()"><i class="fa-solid fa-plus"></i> Add</button>
                         <button class="btn btn-warning" onclick="updateData()"><i class="fa-solid fa-pen"></i> Update</button>
                         <button class="btn btn-danger" onclick="deleteData()"><i class="fa-solid fa-trash"></i> Delete</button>
                     </div>
@@ -32,10 +32,10 @@
                 <tr>
                     <th data-checkbox="true"></th>
                     <th data-formatter="sortTable" data-align="center">STT</th>
-                    <th data-field="id" data-visible="false">ID</th>
-                    <th data-field="name">Name</th>
-                    <th data-field="time">Time</th>
-                    <th data-field="days">Days</th>
+                    <th data-field="Id" data-visible="false">ID</th>
+                    <th data-field="Name">Name</th>
+                    <th data-field="Time" data-formatter="timeFormatter">Time</th>
+                    <th data-field="Days">Days</th>
                 </tr>
                 </thead>
             </table>
@@ -51,8 +51,22 @@
 <script>
     function getIdSelections() {
         return $.map($('#ShiftTable').bootstrapTable('getSelections'), function (row) {
-            return row.id
+            return row.Id
         })
+    }
+
+    function showData() {
+        var selectedRows = getIdSelections();
+        if (selectedRows.length == 1) {
+            var url = '@Url.Action("ShowViewPopup", "Shift")' + "?id=" + selectedRows[0];
+
+            $.get(url, function (data) {
+                $('#modelContainer').html(data);
+                $('#modal-default').modal('show');
+            });
+        } else {
+            notyf.error('Please select a row to view.');
+        }
     }
 
     function addData() {
@@ -64,19 +78,15 @@
         })
     }
 
-    function showData() {
-        var selectedRows = getIdSelections();
-        if (selectedRows.length == 1) {
-            alert('View: ' + JSON.stringify(selectedRows));
-        } else {
-            notyf.error('Please select a row to view.');
-        }
-    }
-
     function updateData() {
         var selectedRows = getIdSelections();
         if (selectedRows.length == 1) {
-            alert('Update: ' + JSON.stringify(selectedRows));
+            var url = '@Url.Action("ShowUpdatePopup", "Shift")' + "?id=" + selectedRows[0];
+
+            $.get(url, function (data) {
+                $('#modelContainer').html(data);
+                $('#modal-default').modal('show');
+            });
         } else {
             notyf.error('Please select a row to update.');
         }
@@ -85,7 +95,31 @@
     function deleteData() {
         var selectedRows = getIdSelections();
         if (selectedRows.length > 0) {
-            alert('Delete: ' + JSON.stringify(selectedRows));
+            var deleteData = function () {
+                // showLoading(true);
+                $.ajax({
+                    url: '@Url.Action("Delete", "Shift")',
+                    type: 'POST',
+                    dataType: 'json',
+                    data: {
+                        listSelectedId: selectedRows
+                    },
+                    success: function (data) {
+                        if (data.IsSuccess) {
+                            notyf.success(deleteSuccess);
+                            refreshGrid();
+                        }
+                        else {
+                            notyf.error(data.Message);
+                        }
+                    },
+                    error: function (request, status, err) {
+                        notyf.error(errorMessage);
+                    }
+                });
+                // showLoading(false);
+            }
+            return confirmDialogYesNo(titleConfirm, deleteConfirmText, deleteData);
         } else {
             notyf.error('Please select a row to delete.');
         }
@@ -104,6 +138,14 @@
     }
 
     function refreshGrid() {
-        showLoading(false);
+        $('#ShiftTable').bootstrapTable('refresh');
+    }
+
+    function timeFormatter(value, row, index) {
+        if (value) {
+            let time = value.split(":");
+            return time[0] + ":" + time[1];
+        }
+        return value;
     }
 </script>
