--- a/GUI/Views/Shared/Components/SideBar/Default.cshtml
+++ b/GUI/Views/Shared/Components/SideBar/Default.cshtml
@@ -199,5 +199,17 @@
                 Course
             </a>
         </li>
+        <li class="sidebar-item">
+            <a href="@Url.Action("Index", "Program")" class="sidebar-link">
+                <i class="fa-solid fa-gears"></i>
+                Program
+            </a>
+        </li>
+        <li class="sidebar-item">
+            <a href="@Url.Action("Index", "Parent")" class="sidebar-link">
+                <i class="fa-solid fa-person-breastfeeding"></i>
+                Parent
+            </a>
+        </li>
     </ul>
 </div>
