--- a/GUI/Views/Category/Shift/PopupDetail.cshtml
+++ b/GUI/Views/Category/Shift/PopupDetail.cshtml
@@ -70,7 +70,7 @@ var selectDays = Model.SelectDays ?? new List<string>();
             $("#frmShift").find("span.field-validation-valid").show();
             
             if ($("#frmShift").valid()) {
-                @* showLoadingElement(true, 'modalLoading'); *@
+                showLoading();
 
                 $.ajax({
                     url: '/Shift/Post',
@@ -92,7 +92,7 @@ var selectDays = Model.SelectDays ?? new List<string>();
                         }
                     }
                 });
-                @* showLoadingElement(false, 'modalLoading'); *@
+                hideLoading();
             }
         });
     })
